--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Feb 07 09:12:55 EET 2020
-sdk.dir=/Users/admin/Library/Android/sdk
+#Thu Feb 13 18:07:54 EET 2020
+sdk.dir=C\:\\Users\\Jice\\AppData\\Local\\Android\\Sdk
