--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Feb 15 14:41:15 EET 2020
-sdk.dir=/Users/admin/Library/Android/sdk
+#Thu Feb 27 17:07:23 EET 2020
+sdk.dir=C\:\\Users\\Jice\\AppData\\Local\\Android\\Sdk
