--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,11 +47,11 @@ dependencies {
     //implementation group: 'com.sun.mail', name: 'android-activation', version: '1.6.2'
     //implementation group: 'com.sun.mail', name: 'javax.mail', version: '1.6.2'
 
-    implementation group: 'javax.activation', name: 'activation', version: '1.1.1'
-    implementation group: 'javax.mail', name: 'mail', version: '1.4.7'
-    implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
-    implementation group: 'com.sun.xml.bind', name: 'jaxb-impl', version: '2.3.0'
-    implementation group: 'com.sun.xml.bind', name: 'jaxb-core', version: '2.3.0'
+    //implementation group: 'javax.activation', name: 'activation', version: '1.1.1'
+    //implementation group: 'javax.mail', name: 'mail', version: '1.4.7'
+    //implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
+    //implementation group: 'com.sun.xml.bind', name: 'jaxb-impl', version: '2.3.0'
+    //implementation group: 'com.sun.xml.bind', name: 'jaxb-core', version: '2.3.0'
 
 //FIREBASE
 
