--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Feb 28 09:00:32 EET 2020
-sdk.dir=/Users/admin/Library/Android/sdk
+#Sun Jun 14 23:13:44 EEST 2020
+sdk.dir=C\:\\Users\\Jice\\AppData\\Local\\Android\\Sdk
