--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.myapplication">
+    package="com.example.pizzadelivery">
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
@@ -12,9 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <meta-data android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyDhsNEN2z7CVHMCm1zI_WE523ZuePvrRYE" />
 
+        <activity android:name="com.example.pizzadelivery.activity.OtpActivity" />
+        <activity android:name="com.example.pizzadelivery.activity.LoginActivity" />
         <activity
             android:name="com.example.pizzadelivery.activity.MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
@@ -24,12 +24,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name="com.example.pizzadelivery.phoneVerify.PhoneAuthActivity"
-            android:label="@string/label_phone_auth"
-            android:windowSoftInputMode="adjustPan" >
-
-        </activity>
+        <meta-data android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyDhsNEN2z7CVHMCm1zI_WE523ZuePvrRYE"
+            />
+        <meta-data
+            android:name="pre_fonts"
+            android:resource="@array/pre_fonts" />
     </application>
 
 </manifest>
